tests/ui/type-alias-impl-trait/issue-69136-inner-lifetime-resolve-error.stderr
error[E0261]: use of undeclared lifetime name `'a`
  --> $DIR/issue-69136-inner-lifetime-resolve-error.rs:17:65
   |
LL | type Return<A> = impl WithAssoc<A, AssocType = impl SomeTrait + 'a>;
   |                                                                 ^^ undeclared lifetime
   |
   = note: for more information on higher-ranked polymorphism, visit https://doc.rust-lang.org/nomicon/hrtb.html
help: consider making the bound lifetime-generic with a new `'a` lifetime
   |
LL | type Return<A> = impl for<'a> WithAssoc<A, AssocType = impl SomeTrait + 'a>;
   |                       +++++++
help: consider introducing lifetime `'a` here
   |
LL | type Return<'a, A> = impl WithAssoc<A, AssocType = impl SomeTrait + 'a>;
   |             +++

error[E0792]: non-defining opaque type use in defining scope
  --> $DIR/issue-69136-inner-lifetime-resolve-error.rs:20:27
   |
LL | type Return<A> = impl WithAssoc<A, AssocType = impl SomeTrait + 'a>;
   |             - this generic parameter of the opaque must be used with a generic type parameter
...
LL | fn my_fun() -> Return<()> {}
   |                           ^^ expected generic type parameter, found `()`

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0261, E0792.
For more information about an error, try `rustc --explain E0261`.
